--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mythology, Norse'
 - !lcc 'PT'
+- GITenberg
 title: 'Edda: taruopillinen alkuosa; Gylfin harhanäky (Gylfaginning)'
 url: http://www.gutenberg.org/ebooks/45373
